recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:3: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:4: error: identifier expected but ')' found.
    right(90.)
             ^FourSquare:5: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:6: error: identifier expected but ')' found.
    right(90.)
             ^FourSquare:7: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:8: error: identifier expected but ')' found.
    right(90.)
             ^FourSquare:9: error: identifier expected but ')' found.
    forward(100.)
                ^FourSquare:10: error: identifier expected but ')' found.
    right(180.)
              ^